[package]
name = "hydrangea"
version = "0.1.1"
authors = ["conrad"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.14.0"
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["macros", "tcp", "dns", "io-util"] }
radix64 = "0.6.2"
failure = "0.1.8"
serde = "1.0.106"
pickledb = "0.4.1"
rand = "0.7.3"
openssl-sys = "*"
linkify = "0.4.0"
handlebars = "3.5.1"
serde_json = "1.0.60"
fancy-regex = "0.5.0"
urlparse = "0.7.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
html-escape = "0.2.9"
serde_derive = "1.0.136"

[features]
vendored = ["openssl-sys/vendored"]