[package]
name = "hydrangea"
version = "0.1.1"
authors = ["conrad"]
edition = "2021"
license = "MIT"

[dependencies]
irc = "0.15.0"
futures = "0.3.4"
tokio = { version = "1.19.2", features = ["macros", "io-util"] }
radix64 = "0.6.2"
failure = "0.1.8"
serde = "1.0.106"
pickledb = "0.4.1"
rand = "0.8.5"
openssl-sys = "*"
linkify = "0.4.0"
handlebars = "3.5.1"
serde_json = "1.0.60"
fancy-regex = "0.5.0"
urlparse = "0.7.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
html-escape = "0.2.9"
serde_derive = "1.0.136"
base64 = "0.13.0"
webpage = "1.4.0"
crossbeam-channel = "0.5.4"

[patch.crates-io]
irc = { git = 'https://github.com/clukawski/irc', branch="develop" } 

[features]
vendored = ["openssl-sys/vendored"]